tests/valid/dsa_power.c
float base = 2.5;
int exp = 4;
float result = 1.0;
int i;

for (i = 0; i < exp; i = i + 1)
{
    result = result * base;
}
