tests/errors/multi_error_3.c
for (i = 0 i < 10 i = i + 1) // Missing semicolons in for
{
    int x = 5;
    float x = 2.0; // Redeclaration
}

x = y; // Undeclared both x and y
